# energy-bidding-competition-backend

./: .gitignore  README.md  config.json  log_conf.yaml  pyproject.toml  start_server.sh
hackathon_backend/: config.py  controller.py  general_demand.py  interface.py  main.py  market.py  persistence.py  score.py
hackathon_backend/accounting/: account.py  accounter.py
hackathon_backend/market/: auction.py  market.py
hackathon_backend/units/: battery.py  load.py  pool.py  pv.py  unit.py  vpp.py
tests/: config.json  test_accounting.py  test_controller.py  test_general_demand.py  test_integration.py  test_simulation.py
tests/market/: test_auction.py  test_market.py
tests/units/: test_battery.py  test_load.py  test_parametrization.py  test_pool.py  test_pv.py  test_vpp.py
