[tool.poetry]
name = "hackathon-backend"
version = "0.1.0"
description = ""
authors = ["Rico Schrage <rico.schrage@uni-oldenburg.de>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
fastapi = "^0.110.0"
pysimmods = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
