[tool.poetry]
name = "hackathon-backend"
version = "0.1.0"
description = ""
authors = ["Rico Schrage <rico.schrage@uni-oldenburg.de>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
fastapi = "^0.110.0"
pysimmods = "^0.11.2"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
trio = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
