[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hackathon-backend"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Rico Schrage", email = "rico.schrage@uni-oldenburg.de" }
]
requires-python = ">=3.9"

dependencies = [
    "uvicorn[standard]==0.27.1",
    "fastapi==0.110.0",
    "matplotlib==3.9.0",
    "httpx==0.27.0",
    "midas-util==1.1.2",
    "pysimmods==0.20.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools]
packages = ["hackathon_backend"]
